Add exporting reports as pdf file to reports user inferface

BUG:492831
FIXED-IN:5.2